# pourmatcha

./: .gitignore  README.md  add_bboxes_with_grounding_dino.py  clean_so100_dataset.py  playground.ipynb  record.sh
lerobot/.cache/calibration/so100/: cv_follower.json  cv_leader.json  main_leader.json
lerobot/.cache/calibration/so100-backup/: main_follower.json
lerobot/lerobot/common/datasets/: transforms.py
lerobot/lerobot/common/robot_devices/: control_utils.py
lerobot/lerobot/common/robot_devices/robots/: configs.py
lerobot/lerobot/scripts/: control_robot.py
lerobot_serl_bridge/: INTEGRATION_SUMMARY.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
lerobot_serl_bridge/examples/: __init__.py  basic_training.py  serl_integration_example.py
lerobot_serl_bridge/lerobot_serl_bridge/: __init__.py
lerobot_serl_bridge/lerobot_serl_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
lerobot_serl_bridge/lerobot_serl_bridge/bridge/: __init__.py  jax_act_policy.py  policy_converter.py
lerobot_serl_bridge/lerobot_serl_bridge/environment/: __init__.py  robot_wrapper.py
lerobot_serl_bridge/lerobot_serl_bridge/training/: __init__.py  config.py  online_trainer.py  reward_functions.py
lerobot_serl_bridge/lerobot_serl_bridge/utils/: __init__.py  serl_utils.py
lerobot_serl_bridge/scripts/: install_serl.py  train_online.py
