[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "lerobot_serl_bridge"
version = "0.1.0"
description = "Integration library for SERL online RL with LeRobot ACT policies"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SERL-LeRobot Integration Team"}
]
maintainers = [
    {name = "SERL-LeRobot Integration Team"}
]
keywords = [
    "robotics",
    "reinforcement-learning", 
    "online-rl",
    "jax",
    "pytorch",
    "serl",
    "lerobot"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "torch>=1.11.0",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "flax>=0.7.0", 
    "optax>=0.1.7",
    "wandb>=0.15.0",
    "tensorboard>=2.8.0",
]

[project.optional-dependencies]
cuda11 = ["jax[cuda11_pip]"]
cuda12 = ["jax[cuda12_pip]"]
dev = [
    "pytest>=6.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.scripts]
lerobot-serl-train = "lerobot_serl_bridge.scripts.train_online:main"

[project.urls]
Homepage = "https://github.com/yourusername/lerobot_serl_bridge"
Repository = "https://github.com/yourusername/lerobot_serl_bridge.git"
Documentation = "https://lerobot-serl-bridge.readthedocs.io/"
Issues = "https://github.com/yourusername/lerobot_serl_bridge/issues"

[tool.setuptools]
packages = ["lerobot_serl_bridge"]

[tool.setuptools.package-data]
lerobot_serl_bridge = ["docs/*.md"]

[tool.black]
line-length = 79
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]
per-file-ignores = [
    "__init__.py:F401"
] 